<resources>
    <string name="app_name">Foodie</string>
    <string name="api_key">YOUR_API_KEY</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="welcome_login">Welcome to Foodie Food Delivery</string>
    <string name="location_permission_needed">To get current location, turn on location and allow Foodie app to access your device\'s location.</string>
    <string name="location_permission_needed_after_permanent_denial">To get current location, turn on location and allow Foodie app to access your device\'s location. Tap Settings > Permissions, and allow "Location" permission.</string>

    <string name="sign_up_text"><font color='#7D7D7D'>Don\'t have an account? </font><font color='#007AFF'><u>Sign up</u></font></string>
    <string name="sign_up_text_2"><font color='#f2f2f2'>New Here? </font><font color='#f2f2f2'><u>Sign up</u></font></string>
    <string name="sign_in_text"><font color='#f2f2f2'>Already Registered? </font><font color='#f2f2f2'><u>Login</u></font></string>
    <string name="welcome">Welcome,</string>
    <string name="log_in_to_continue">Log in to continue!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_body">Sign up to get started!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="user_details">User Details</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="_2_of_2">(2 of 2)</string>
    <string name="enter_address_details">Address Details</string>
    <string name="address_details">Address Details</string>
    <string name="city">City</string>
    <string name="line_1_address">Line 1 Address</string>
    <string name="address_line_2">Line 2 Address (Optional)</string>
    <string name="line_3_address">Line 3 Address (Optional)</string>
    <string name="state">State</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="finish">Finish</string>
    <string name="login_using_phone">Login Using Phone</string>
    <string name="login_using_phone_number">Login using Phone Number!</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="reset_password_using_email">Reset Password using Email!</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_user_details">Enter User Details</string>
    <string name="_1_of_2">(1 of 2)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="referral_code">Referral Code (Optional)</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <string name="locality">Locality</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sell_your_product">Sell your Product</string>
    <string name="add_product_images">Add Product Images</string>
    <string name="select_category">Select Category</string>
    <string name="add_product_details">Add Product Details</string>
    <string name="product_title">Product Title *</string>
    <string name="title_hint">Mention the key features of your product (e.g. brand, model, etc.)</string>
    <string name="product_description">Product Description *</string>
    <string name="description_hint">Describe your product\'s condition, features and reason for selling</string>
    <string name="product_image_1">product image 1</string>
    <string name="set_product_price">Set Product Price</string>
    <string name="price">Price</string>
    <string name="rupee_symbol">₹</string>
    <string name="post_product_ad">Post Product Ad</string>
    <string name="browse_products">View Products</string>
    <string name="manage_your_ads">Manage your Ads</string>
    <string name="stop_this_ad">Stop this Ad</string>
    <string name="location">Location</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="manage_your_address">Manage your Address</string>
    <string name="wishlist">My Wishlist</string>
    <string name="sell">Sell</string>
    <string name="products">Products</string>
    <string name="categories">Categories</string>
    <string name="view_categories">View Categories</string>
    <string name="my_profile">My Profile</string>
    <string name="mobiles">Mobile Phones</string>
    <string name="no_products_found_in_your_area">No products found in your area</string>
    <string name="other">Other</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="computers">Computers</string>
    <string name="tablets">Tablets</string>
    <string name="bikes">Bikes</string>
    <string name="cars">Cars</string>
    <string name="chairs">Chairs</string>
    <string name="tables">Tables</string>
    <string name="society_name_not_found">Society name not found. <b>Click here to add this society name</b></string>
    <string name="chat_help">Resolve all your queries by directly messaging product seller and make sure to not share any sensitive data such as UPI pin, bank details etc.</string>
    <string name="otp_info">A 6 digit one time password has been send to your mobile number, please enter it here</string>
    <string name="otp_info_email">A 6 digit one time password has been send to your email address, please enter it here</string>
    <string name="privacy_policy">By continuing, you are accepting <u><b>Foodie\'s Terms of Use and Privacy Policy</b></u></string>
    <string name="confirm_online_order">Click <b>Proceed</b> below to finish payment and place order</string>
    <string name="confirm_cod_order">Click <b>Confirm</b> below to place your order</string>

</resources>