<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/ll_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="12dp"
                android:src="@drawable/ic_back"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/txt_welcome_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Enter Personal Details"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_app_bar" />

        <LinearLayout
            android:id="@+id/ll_personal_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_app_bar">

            <TextView
                android:id="@+id/name_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/brown_300"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="textEmailAddress"
                android:textColor="#929292"/>

            <TextView
                android:id="@+id/password_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/brown_300"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="#929292"
                android:text="9999999999"/>

            <TextView
                android:id="@+id/email_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/brown_300"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="textEmailAddress"
                android:textColor="#929292" />

            <TextView
                android:id="@+id/txt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/brown_300"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/brown_300"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="@color/brown_300"
                    android:textSize="16sp" />


                <RadioButton
                    android:id="@+id/radio_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:buttonTint="@color/brown_300"
                    android:text="@string/female"
                    android:textColor="@color/brown_300"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="10dp"
                android:text="Next"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="100dp"
                android:indeterminateTint="@color/blue_500"
                android:src="@drawable/loading_anim"
                android:visibility="gone" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>