<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/ll_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="12dp"
                android:src="@drawable/ic_back"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/txt_welcome_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Enter Address Details"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_app_bar" />

        <LinearLayout
            android:id="@+id/ll_address_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_app_bar">

            <TextView
                android:id="@+id/l1_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="House No. / Flat No. / Tower No."
                android:textColor="@color/brown_300"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_text_line_1_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="text"
                android:textColor="#929292" />

            <TextView
                android:id="@+id/l2_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Area"
                android:textColor="@color/brown_300"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edit_text_line_2_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="text"
                android:textColor="#929292" />

            <TextView
                android:id="@+id/city_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/brown_300"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edit_text_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="text"
                android:textColor="#929292" />

            <TextView
                android:id="@+id/state_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textColor="@color/brown_300"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edit_text_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:textColor="#929292" />

            <TextView
                android:id="@+id/pin_code_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pincode"
                android:textColor="@color/brown_300"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edit_text_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="#929292" />

            <TextView
                android:id="@+id/referral_code_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/referral_code"
                android:textColor="@color/brown_300"
                android:textSize="14sp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/edit_text_referral_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp"
                android:background="@drawable/edit_text_bg"
                android:textColor="#929292"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_address_details">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_finish_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="10dp"
                android:text="Next"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="100dp"
                android:indeterminateTint="@color/blue_500"
                android:src="@drawable/loading_anim"
                android:visibility="gone" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>